--- a/TDT4171/pyproject.toml
+++ b/TDT4171/pyproject.toml
@@ -10,6 +10,7 @@ numpy = "^1.22.2"
 matplotlib = "^3.5.1"
 jupyter = "^1.0.0"
 pandas = "^1.4.0"
+graphviz = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
