--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = ""
 authors = ["sindrelothe <sindrl@online.no>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 numpy = "^1.22.2"
 matplotlib = "^3.5.1"
 jupyter = "^1.0.0"
 pandas = "^1.4.0"
 graphviz = "^0.19.1"
+tensorflow = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
