--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ jupyter = "^1.0.0"
 pandas = "^1.4.0"
 graphviz = "^0.19.1"
 tensorflow = "^2.8.0"
+black = "^22.1.0"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
