--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ graphviz = "^0.19.1"
 tensorflow = "^2.8.0"
 black = "^22.1.0"
 sklearn = "^0.0"
+keras-tuner = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
